# cloudcost

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cloudcost/: __init__.py  cli.py
cloudcost/aliyun/: __init__.py  ecs_optimizer.py  oss_analyzer.py  scanner.py
cloudcost/aws/: __init__.py  ec2_optimizer.py  elasticache_optimizer.py  rds_optimizer.py  ri_planner.py  s3_analyzer.py  scanner.py
cloudcost/core/: __init__.py  anomaly.py  reporter.py  terraform.py
cloudcost/dashboard/: app.py
demo/: cast2gif.py  record.sh
examples/: basic_usage.py
tests/: __init__.py  test_aliyun.py  test_anomaly.py  test_aws.py  test_terraform.py
tests/fixtures/: sample_plan.json
