[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudcost"
version = "0.1.0"
description = "Multi-cloud FinOps cost optimization for AWS & Alibaba Cloud"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CloudCost Contributors"}
]
keywords = ["finops", "aws", "alibaba-cloud", "cost-optimization", "cloud", "multi-cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tabulate>=0.9",
    "python-dateutil>=2.8",
    "jinja2>=3.1",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
aliyun = ["alibabacloud_tea_openapi>=0.3"]
dashboard = ["dash>=2.14", "plotly>=5.18", "pandas>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3",
    "boto3>=1.34",
]

[project.scripts]
cloudcost = "cloudcost.cli:main"

[project.urls]
Homepage = "https://github.com/AlexLiu-vibecoding/cloudcost"
Repository = "https://github.com/AlexLiu-vibecoding/cloudcost.git"
Issues = "https://github.com/AlexLiu-vibecoding/cloudcost/issues"

[tool.setuptools.packages.find]
include = ["cloudcost*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
